--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 
 <script src="http://www.google.com/jsapi" type="text/javascript"></script>
@@ -650,7 +650,7 @@ figure {
         };
     }
 
-    
+
     function show_group(elements, objects, N) {
         var controls = [];
         for (var i=0; i<elements.length; i++) {
