--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ figure {
     
     <div id="authors">
         <div class="author-row">
-            <div class="col-4 text-center"><a href="https://cims.nyu.edu/~francisw/">Francis Williams</a><sup>1,2*</sup></div>
+            <div class="col-4 text-center"><a href="https://www.fwilliams.info/">Francis Williams</a><sup>1,2*</sup></div>
             <div class="col-4 text-center"><a href="https://zgojcic.github.io/">Zan Gojcic</a><sup>1,3*</sup></div>
             <div class="col-4 text-center"><a href="https://www.samehkhamis.com/">Sameh Khamis</a><sup>1</sup></div>
             <div class="col-4 text-center"><a href="https://cims.nyu.edu/gcl/denis.html">Denis Zorin</a><sup>2</sup></div>
@@ -296,7 +296,7 @@ figure {
         <div class="affil-row">
             <div class="col-5 text-center"><sup>1</sup>NVIDIA</a></div>
             <div class="col-5 text-center"><sup>2</sup>New York University</div>
-            <div class="col-5 text-center"><sup>3</sup>ETH Zurich</div>
+            <div class="col-5 text-center"><sup>3</sup>ETH Zürich</div>
             <div class="col-5 text-center"><sup>4</sup>University of Toronto</div>
             <div class="col-5 text-center"><sup>5</sup>Vector Institute</div>
         </div>
