arxiv links and bibtex

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ figure {
 
         <div style="clear: both">
             <div class="paper-btn-parent">
-            <a class="supp-btn" href="assets/Neural_Kernel_Fields.pdf">
+            <a class="supp-btn" href="https://arxiv.org/abs/2111.13674">
                 <span class="material-icons"> description </span> 
                  Paper
             </a>
@@ -462,12 +462,14 @@ figure {
         <h2>Citation</h2>
         <hr>
         <pre><code>
-            @article{williams2021nkf,
-            author = {Francis williams and Zan Gojcic and Sameh Khamis and 
-                      Denis Zorin and Joan Bruna and Sanja Fidler and Or Litany}
-            title = "{Neural Fields as Learnable Kernels for 3D Reconstruction}",
-            journal = {INSERT ARXIV ID},
-            year = {2021}}
+            @misc{williams2021nkf,
+                title={Neural Fields as Learnable Kernels for 3D Reconstruction}, 
+                author={Francis Williams and Zan Gojcic and Sameh Khamis and Denis Zorin
+                        and Joan Bruna and Sanja Fidler and Or Litany},
+                year={2021},
+                eprint={2111.13674},
+                archivePrefix={arXiv},
+                primaryClass={cs.CV}}
         </code></pre>
     </section>
 
@@ -475,7 +477,7 @@ figure {
         <h2>Paper</h2>
         <hr>
         <figure style="width: 100%;">
-            <a href="assets/Neural_Kernel_Fields.pdf">
+            <a href="https://arxiv.org/abs/2111.13674">
                 <img width="100%" src="assets/paper.png">
             </a>
         </figure>
