Added video and poster

--- a/index.html
+++ b/index.html
@@ -300,15 +300,23 @@ figure {
             <div class="col-5 text-center"><sup>4</sup>University of Toronto</div>
             <div class="col-5 text-center"><sup>5</sup>Vector Institute</div>
         </div>
-        <!-- <div class="affil-row">
-            <div class="venue text-center"><b></b></div>
-        </div> -->
+        <div class="affil-row">
+            <div class="venue text-center"><b>CVPR 2022</b></div>
+        </div>
 
         <div style="clear: both">
             <div class="paper-btn-parent">
             <a class="supp-btn" href="https://arxiv.org/abs/2111.13674">
                 <span class="material-icons"> description </span> 
                  Paper
+            </a>
+            <a class="supp-btn" href="https://youtu.be/WkxfEwISqg8">
+                <span class="material-icons"> description </span> 
+                  Video
+            </a>
+            <a class="supp-btn" href="assets/poster.pdf">
+                <span class="material-icons"> description </span> 
+                  Poster
             </a>
             <a class="supp-btn" href="assets/bib.txt">
                 <span class="material-icons"> description </span> 
